# memento_agents

./: .gitignore  .gitmodules  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_OVERVIEW.md  INTEGRATION_ARE_MEMENTO.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ARE/: CUSTOM_AGENT_GUIDE.md
docs/: MEMENTO_GUIDE.md
notebooks/: 01_understanding_are_framework.ipynb  02_running_custom_agent.ipynb  03_agent_with_memory.ipynb  memento_tutorial.ipynb
