[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "gaia2-memento"
version = "0.1.0"
description = "Unified codebase combining ARE (Meta Agents Research Environments) and Memento with integrated modules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    # Core dependencies from ARE
    "click==8.1.8",
    "datasets==4.0.0",
    "deepdiff>=8.6.1",
    "docstring-parser==0.16",
    "fastapi==0.116.1",
    "fsspec==2024.12.0",
    "geographiclib==2.0",
    "huggingface-hub==0.33.4",
    "inputimeout==1.0.4",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "litellm==1.71.1",
    "mammoth==1.8.0",
    "markdownify==0.14.1",
    "mcp[cli]==1.11.0",
    "mysql-connector-python==9.2.0",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "pathvalidate==3.2.1",
    "pdfminer.six==20231228",
    "phonenumbers==8.13.53",
    "pillow==11.1.0",
    "polars-lts-cpu==1.33.1",
    "puremagic==1.27",
    "pydantic==2.10.6",
    "pypdf==6.0.0",
    "python-dotenv>=1.1.0",
    "python-pptx==1.0.2",
    "rapidfuzz==3.12.1",
    "retry==0.9.2",
    "s3fs==2024.12.0",
    "starlette==0.47.2",
    "strawberry-graphql==0.275.5",
    "termcolor==2.5.0",
    "tqdm_joblib==0.0.4",
    "uvicorn==0.35.0",
    "wsproto==1.2.0",
    
    # Additional dependencies from Memento
    "assemblyai==0.40.2",
    "chunkr-ai>=0.3.7",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "crawl4ai>=0.7.4",
    "docx2markdown==0.1.1",
    "fastmcp==2.7.0",
    "ffmpeg-python>=0.2.0",
    "loguru==0.7.3",
    "openai==1.75.0",
    "opencv-python==4.11.0.86",
    "scenedetect==0.6.6",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "xmltodict==0.14.2",
    "yt-dlp>=2025.8.27",
]

[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "build==1.2.1",
    "codespell==2.4.1",
    "debugpy==1.8.12",
    "flake8-tidy-imports==4.11.0",
    "flake8==7.1.1",
    "hatchling==1.21.1",
    "pre-commit==2.21.0",
    "pyright==1.1.406",
    "pytest==8.3.4",
    "ruff==0.11.5",
    "twine==5.0.0",
    "typer==0.16.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/gaia2-memento"
Repository = "https://github.com/your-org/gaia2-memento.git"

[tool.hatch.metadata]
allow-direct-references = true
